--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Tien Nguyen
 
 # Short bio or description (displayed in the header)
-description: Tech notes 
+description: Tech test notes 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
