--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Tien Nguyen
+name: Tien Nguyen Test
 
 # Short bio or description (displayed in the header)
 description: Tech test notes 
